# NextTree

./: .gitignore  README.md  pyproject.toml
app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
front/: README.md  index.html  jsconfig.json  pnpm-lock.yaml
front/src/: App.vue
front/src/assets/: main.css
front/src/components/: Sidebar.vue  StatsGrid.vue  TaskCard.vue
web/: index.html
